--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,81 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+  padding-top: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#text1 {
+  font-family: 'Poppins';
+  font-weight: bold;
+  padding-top: 35px;
+  padding-bottom: 25px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+body{
+  display:flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.body1 {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.buttons1 {
+  display:grid;
+  margin:auto;
+}
+
+.buttons1 button {
+  width: 220px;
+  height: 150px;
+  font-family: 'Poppins';
+  font-weight: bolder;
+  border-radius: 12px;
+  margin-right: 18px;
+  margin-bottom: 17px;
+}
+
+.comment{
+  position: absolute; bottom: -15px;
+
+}
+
+#input{
+  width: 700px;
+  height: 120px;
+}
+
+.btn1{
+  position: absolute; bottom: -90px;
+
+}
+
+.btn1 button{
+  width: 150px;
+}
+
+.toggle-btn {
+
+  width: 100%;
+  height: 100%;
+  font-family: 'Poppins';
+  font-weight: bolder;
+  border-radius: 10px;
+  margin-right: 18px;
+  margin-bottom: 17px;
+  background-color: white;
+}
+
+.toggle-close{
+  background-color: green;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.toggle-btn:hover {
+background-color: green;
+color: white;
 }
