--- a/src/App.css
+++ b/src/App.css
@@ -2,39 +2,35 @@
   text-align: center;
 }
 
-.header {
-  padding-top: 20px;
-}
-
-#text1 {
-  font-family: 'Poppins';
-  font-weight: bold;
-  padding-top: 35px;
-  padding-bottom: 25px;
-}
-
 body{
   display:flex;
   align-items: center;
   justify-content: center;
 }
 
-#bod1{
-
+.home-header {
+  padding-top: 20px;
 }
 
-.body1 {
+#home-header-text {
+  font-family: 'Poppins';
+  font-weight: bold;
+  padding-top: 35px;
+  padding-bottom: 25px;
+}
+
+.services-buttons-container {
   display:flex;
   align-items: center;
   justify-content: center;
 }
 
-.buttons1 {
+.services-buttons {
   display:grid;
   margin:auto;
 }
 
-.buttons1 button {
+.services-buttons button {
   width: 220px;
   height: 150px;
   font-family: 'Poppins';
@@ -44,23 +40,21 @@ body{
   margin-bottom: 17px;
 }
 
-.comment{
+.home-comment-area{
   position: relative; bottom: -5px;
 }
 
-#input{
+#home-commentBox{
   width: 700px;
   height: 120px;
 }
 
-.btn1{
+.home-continue{
   position: relative; bottom: -35px;
-
   float: left;
-
 }
 
-.btn1 button{
+.home-continue button{
   width: 150px;
 }
 
@@ -84,4 +78,71 @@ body{
 .toggle-btn:hover {
 background-color: green;
 color: white;
+}
+
+.details {
+  margin-top: 30px;
+
+}
+
+.details-header {
+  font-family: 'Poppins';
+  font-weight: bolder;
+  padding-bottom: 20px;
+}
+
+.details-form {
+
+  margin-top: 20px;
+}
+
+.details-label {
+  display: block;
+  margin-bottom: 15px;
+  font-family: Poppins;
+  font-size: small;
+}
+
+.details-textbox{
+  margin-top: 7px;
+  width: 100%;
+  height: 40px;
+  font-size: 16px;
+  font-size: Max(16px, 1em);
+  font-family: Poppins;
+  padding: 0.25em 0.5em;
+  background-color: #fff;
+  border: 2px solid;
+  border-radius: 3px;
+}
+
+.details-switch {
+  margin-top: 25px;
+}
+#details-switch1 {
+  margin-top: 5px;
+}
+
+#details-switch2 {
+  margin-top: 37px;
+}
+
+.details-switch-text {
+  float: right;
+  padding-left: 42px;
+  width: 350px;
+  font-family: Poppins;
+  font-size: 13px;
+
+}
+
+.details-switch label {
+  font-size: 14px;
+  font-weight: bold;
+  font-family: Poppins;
+}
+
+.details-confirm{
+  position: relative; bottom: -20px;
+  float: left;
 }
