--- a/React/src/App.css
+++ b/React/src/App.css
@@ -187,3 +187,66 @@ color: white;
 .button-select-location{
   width: 150px;
 }
+
+.times-header{
+  display: flex;
+  justify-content: center;
+  font-family: 'Poppins';
+  font-weight: bolder;
+  margin-top: 20px;
+  padding-bottom: 20px;
+}
+
+.calendar-holder{
+  display:flex;
+  justify-content: center;
+
+}
+
+.time-holder{
+  display:flex;
+  justify-content: center;
+  margin-top: 35px;
+}
+
+.time-holder h2 {
+  font-family: 'Poppins';
+  font-weight: bolder;
+}
+
+.times-buttons-container {
+  margin-top: 25px;
+  padding-left: 60px;
+  display:flow;
+  justify-content: center;
+  width: 500px;
+  height: 400px;
+}
+
+.times-buttons-container button {
+  width: 110px;
+  height: 50px;
+  font-family: 'Poppins';
+  font-weight: bolder;
+  border-radius: 10px;
+}
+
+.confirm-header{
+  display: flex;
+  justify-content: center;
+  font-family: 'Poppins';
+  font-weight: bolder;
+  margin-top: 20px;
+  padding-bottom: 20px;
+}
+
+.confirm-text{
+  text-align: center;
+  font-family: Poppins;
+  font-weight: bold;
+}
+
+.confirm-info{
+  margin-top: 40px;
+  display: flex;
+}
