--- a/React/src/App.css
+++ b/React/src/App.css
@@ -220,7 +220,7 @@ color: white;
   display:flow;
   justify-content: center;
   width: 500px;
-  height: 400px;
+  height: 235px;
 }
 
 .times-buttons-container button {
@@ -229,6 +229,10 @@ color: white;
   font-family: 'Poppins';
   font-weight: bolder;
   border-radius: 10px;
+}
+
+.submit-time-button{
+  margin-left: 55px;
 }
 
 .confirm-header{
@@ -249,4 +253,20 @@ color: white;
 .confirm-info{
   margin-top: 40px;
   display: flex;
+}
+
+.confirm-button-holder{
+  margin-top: 25px;
+  display: flex;
+  justify-content: center;
+}
+
+.confirm-button-holder button{
+  width: 120px;
+  margin-right: 20px;
+}
+
+.icon-pic{
+  margin-left: 55px;
+
 }
