--- a/React/src/App.css
+++ b/React/src/App.css
@@ -231,8 +231,30 @@ color: white;
   border-radius: 10px;
 }
 
+.newButtons-container {
+  margin-top: 15px;
+  padding-left: 60px;
+  display:flow;
+  justify-content: center;
+  width: 500px;
+  height: 225px;
+
+}
+
+.radios {
+  width: 110px;
+  height: 50px;
+  font-family: 'Poppins';
+  font-weight: bolder;
+  border-radius: 10px;
+  margin-top: 10px;
+  margin-right: 25px;
+}
+
 .submit-time-button{
   margin-left: 55px;
+  width: 110px;
+  height: 50px;
 }
 
 .confirm-header{
@@ -268,5 +290,12 @@ color: white;
 
 .icon-pic{
   margin-left: 55px;
+
+}
+
+.card-div{
+  font-weight: normal;
+  font-family: Poppins;
+  margin-top: 15px;
 
 }
